# orionbelt-semantic-layer

./: .dockerignore  .env.template  .gitignore  404.html  AGENTS.md  CHANGELOG-versions.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.flight  Dockerfile.ui  README.md  deploy-docs.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  deprecate-old-images.yml  docker-publish.yml  notebook.yml  pypi-publish.yml
OBSL/: example-sales.ttl  obsl.shacl.ttl  obsl.ttl  spec.md
api/endpoints/: index.html
api/openapi/: index.html
api/overview/: index.html
comparison/: index.html
comparison/atscale/: index.html
comparison/cube/: index.html
comparison/dbt/: index.html
comparison/lookml/: index.html
comparison/malloy/: index.html
demo/dremio/: .gitignore  README.md  bootstrap.py  build_assets.py  demo-queries.sql  docker-compose.yml  run-demo.sh  sweep_measures.py
docs/: drivers.md  index.md
docs/api/: endpoints.md  overview.md
docs/comparison/: atscale.md  cube.md  dbt.md  index.md  lookml.md  malloy.md
docs/examples/: multi-dialect.md
docs/getting-started/: development.md  docker.md  installation.md  quickstart.md
docs/guide/: authentication.md  cli.md  compilation.md  composability.md  correctness-and-drift-tests.md  dialects.md  freshness-contracts.md  grain-filter-context.md  integrations.md  model-format.md  obsl.md  osi.md  period-over-period.md  postgres-wire-bi-tools.md  query-language.md  result-cache.md  semantic-ql.md  trend-analysis.md  ui.md
docs/javascripts/: gtag-fix.js
docs/reference/: architecture.md  configuration.md
docs/stylesheets/: extra.css
drivers/: index.html
drivers/ob-bigquery/: AGENTS.md  README.md  pyproject.toml
drivers/ob-bigquery/src/ob_bigquery/: __init__.py  cursor.py
drivers/ob-clickhouse/: CLAUDE.md  README.md  pyproject.toml
drivers/ob-clickhouse/src/ob_clickhouse/: cursor.py
drivers/ob-clickhouse/tests/: test_driver.py  test_yaml_detection.py
drivers/ob-databricks/: AGENTS.md  README.md  pyproject.toml
drivers/ob-dremio/: AGENTS.md  README.md  pyproject.toml
drivers/ob-dremio/src/ob_dremio/: __init__.py  connection.py  cursor.py  exceptions.py
drivers/ob-dremio/tests/: test_driver.py  test_yaml_detection.py
drivers/ob-driver-core/: README.md  pyproject.toml
drivers/ob-driver-core/src/ob_driver_core/: type_codes.py
drivers/ob-driver-core/tests/: test_compiler.py
drivers/ob-duckdb/: CLAUDE.md  README.md  pyproject.toml
drivers/ob-duckdb/src/ob_duckdb/: cursor.py
drivers/ob-duckdb/tests/: test_driver.py  test_yaml_detection.py
drivers/ob-flight-extension/: CLAUDE.md  LICENSE  README.md  pyproject.toml
drivers/ob-flight-extension/src/ob_flight/: auth.py  catalog.py  converters.py  db_router.py  flight_sql.py  server.py  server_catalog.py  server_execution.py  server_routing.py  startup.py
drivers/ob-flight-extension/tests/: test_auth.py  test_catalog.py  test_converters.py  test_db_router.py  test_natural_sql.py  test_server.py  test_startup.py
drivers/ob-mysql/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
drivers/ob-mysql/src/ob_mysql/: __init__.py  compiler.py  connection.py  cursor.py  exceptions.py  type_codes.py
drivers/ob-mysql/tests/: test_driver.py  test_yaml_detection.py
drivers/ob-postgres/: CLAUDE.md  README.md  pyproject.toml
drivers/ob-postgres/src/ob_postgres/: __init__.py  cursor.py
drivers/ob-postgres/tests/: test_driver.py  test_yaml_detection.py
drivers/ob-snowflake/: AGENTS.md  README.md  pyproject.toml
examples/: movies.obml.yml  notebook_setup.py  obsql.py  orionbelt_1_commerce.yaml  quickstart.ipynb  quickstart_colab.ipynb  sem-layer.obml.yml  tpcds.obml.yml  tpcds_run.py  tpch.obml.yml
examples/multi-dialect/: index.html
examples/multi-fact/: index.html
examples/sales-model/: index.html
examples/tpcds/: index.html
examples/tpcds_queries/: DEMO-3way.yml  DEMO-AllReturns.yml  DEMO-Inventory.yml  DEMO-Margin.yml  DEMO-YearMonth.yml  Q15.yml  Q19.yml  Q20.yml  Q21.yml  Q22.yml  Q26.yml  Q27.yml  Q3.yml  Q31.yml  Q34.yml  Q40.yml  Q42.yml  Q43.yml  Q49.yml  Q52.yml  Q53.yml  Q55.yml  Q63.yml  Q65.yml  Q66.yml  Q68.yml  Q7.yml  Q70.yml  Q72.yml  Q73.yml  Q79.yml  Q83.yml  Q88.yml  Q98.yml  tpcds_run.py
getting-started/development/: index.html
getting-started/docker/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/authentication/: index.html
guide/cli/: index.html
guide/compilation/: index.html
guide/composability/: index.html
guide/correctness-and-drift-tests/: index.html
guide/dialects/: index.html
guide/freshness-contracts/: index.html
guide/grain-filter-context/: index.html
guide/integrations/: index.html
guide/model-format/: index.html
guide/obsl/: index.html
guide/osi/: index.html
guide/period-over-period/: index.html
guide/postgres-wire-bi-tools/: index.html
guide/query-language/: index.html
guide/result-cache/: index.html
guide/semantic-ql/: index.html
guide/trend-analysis/: index.html
guide/ui/: index.html
integrations/chatgpt-custom-gpt/: instructions.md  openapi-gpt-action.yaml
integrations/crewai/: README.md  orionbelt_tools.py
integrations/google-adk/: README.md  orionbelt_tools.py
integrations/langchain/: README.md  agent_example.py  orionbelt_tools.py
integrations/n8n/: README.md  workflow_compile_query.json
integrations/openai-agents-sdk/: README.md  orionbelt_tools.py
integrations/vercel-ai-sdk/: README.md  orionbelt-tools.ts
ontology/: example-sales.ttl  obsl.shacl.ttl  obsl.ttl  spec.md
osi-obml/: osi_obml_converter.py  osi_obml_mapping_analysis.md  osi_obml_ontology_mapping_analysis.md
overrides/: main.html
reference/architecture/: index.html
reference/configuration/: index.html
reference/python-api/: index.html
schema/: obml-contract.yml  obml-schema.json  query-schema.json
scripts/: deploy-docs.sh  release.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py
(+472 files in other folders)
