[project]
name = "orionbelt-semantic-layer"
version = "1.2.0"
description = "OrionBelt Semantic Layer - Compiles and executes YAML semantic models as analytical SQL"
license = {text = "BSL-1.1"}
authors = [{name = "Ralf Becher, RALFORION d.o.o.", email = "ralf.becher@web.de"}]
requires-python = ">=3.12"
readme = "README.md"
keywords = [
    "semantic-layer",
    "analytics",
    "sql",
    "sql-generation",
    "data-warehouse",
    "yaml",
    "obml",
    "bigquery",
    "snowflake",
    "postgres",
    "clickhouse",
    "dremio",
    "databricks",
    "duckdb",
    "mysql",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.128,<1.0",
    "uvicorn[standard]>=0.40,<1.0",
    "pydantic>=2.12,<3.0",
    "pydantic-settings>=2.12,<3.0",
    "pyyaml>=6.0,<7.0",
    "ruamel.yaml>=0.19,<1.0",
    "networkx>=3.6,<4.0",
    "structlog>=25.1,<26.0",
    "opentelemetry-api>=1.39,<2.0",
    "httpx>=0.28,<1.0",
    "sqlparse>=0.5,<1.0",
    "sqlglot>=26.0,<27.0",
    "jsonschema>=4.23,<5.0",
]

[project.scripts]
orionbelt-api = "orionbelt.api.app:main"
orionbelt-ui = "orionbelt.ui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "httpx>=0.28",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.5",
]
docs = [
    "mkdocs-material>=9.7",
    "mkdocs-autorefs>=1.4",
    "mkdocstrings[python]>=1.0",
]
ui = [
    "gradio>=5.0,<6.0",
]
flight = [
    "pyarrow>=16.0,<20.0",
    "ob-flight-extension>=0.1",
    "ob-duckdb>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orionbelt"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "types-networkx>=3.6.1.20260210",
    "types-PyYAML>=6.0",
]

[tool.uv.workspace]
members = [
    "drivers/ob-driver-core",
    "drivers/ob-bigquery",
    "drivers/ob-snowflake",
    "drivers/ob-postgres",
    "drivers/ob-clickhouse",
    "drivers/ob-dremio",
    "drivers/ob-databricks",
    "drivers/ob-duckdb",
    "drivers/ob-mysql",
    "drivers/ob-flight-extension",
]

[tool.uv.sources]
# Workspace members reference each other without needing PyPI publication
orionbelt-semantic-layer = { workspace = true }
ob-driver-core = { workspace = true }
ob-bigquery = { workspace = true }
ob-snowflake = { workspace = true }
ob-postgres = { workspace = true }
ob-clickhouse = { workspace = true }
ob-dremio = { workspace = true }
ob-databricks = { workspace = true }
ob-duckdb = { workspace = true }
ob-mysql = { workspace = true }
ob-flight-extension = { workspace = true }
