[project]
name = "orionbelt-semantic-layer"
version = "2.21.1"
description = "OrionBelt Semantic Layer - Compiles and executes YAML semantic models as analytical SQL"
license = {text = "BSL-1.1"}
authors = [{name = "Ralf Becher, RALFORION d.o.o.", email = "info@ralforion.com"}]
requires-python = ">=3.12"
readme = "README.md"
keywords = [
    "semantic-layer",
    "analytics",
    "sql",
    "sql-generation",
    "data-warehouse",
    "yaml",
    "obml",
    "bigquery",
    "snowflake",
    "postgres",
    "clickhouse",
    "dremio",
    "databricks",
    "duckdb",
    "mysql",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.128,<1.0",
    "uvicorn[standard]>=0.40,<1.0",
    "pydantic>=2.12,<3.0",
    "pydantic-settings>=2.12,<3.0",
    "pyyaml>=6.0,<7.0",
    "ruamel.yaml>=0.19,<1.0",
    "networkx>=3.6,<4.0",
    "structlog>=25.1,<26.0",
    "opentelemetry-api>=1.39,<2.0",
    "httpx>=0.28,<1.0",
    "sqlglot>=26.0,<27.0",
    "jsonschema>=4.23,<5.0",
    "rdflib>=7.0,<8.0",
    # IANA timezone database for Python's zoneinfo on systems without
    # /usr/share/zoneinfo (e.g. python:3.12-slim Docker images). Without it,
    # ZoneInfo("Europe/Berlin") raises ZoneInfoNotFoundError and the
    # timezone resolver silently falls back to UTC.
    "tzdata>=2025.1",
    # DuckDB's Python binding lazily imports pytz when binding tz-aware
    # datetimes (TIMESTAMPTZ columns). Without it the result-cache meta
    # DB writes/reads raise "Required module 'pytz' failed to import".
    # cache.get/set silently swallow it at WARNING level, queries never
    # cache. Pinning ensures it's resolved at install time.
    "pytz>=2024.1",
    # Typer powers the ``obsl`` CLI (pulls in click + rich). Small footprint
    # next to the existing fastapi / rdflib / sqlglot dependencies, and the
    # CLI is a core entry point alongside orionbelt-api / orionbelt-ui.
    "typer>=0.12,<1.0",
]

[project.scripts]
orionbelt-api = "orionbelt.api.app:main"
orionbelt-ui = "orionbelt.ui.app:main"
obsl = "orionbelt.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "httpx>=0.28",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.5",
    "duckdb>=1.0",
    "testcontainers>=4.0",
    "psycopg2-binary>=2.9",
    "psycopg[binary]>=3.2",
    "pymysql[rsa]>=1.0",
    "clickhouse-connect>=0.7",
]
docs = [
    "mkdocs-material>=9.7",
    "mkdocs-autorefs>=1.4",
    "mkdocstrings[python]>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]
ui = [
    "gradio>=5.0,<6.0",
    # The playground fetches query results over the self-contained Arrow IPC
    # transport (format=arrow) and decodes them client-side, so the UI image
    # needs pyarrow even though it proxies execution to the API.
    "pyarrow>=16.0,<20.0",
]
# OBML <-> OSI converter (packages/osi-orionbelt). Optional: a bare install
# stays lean, and the /convert + /models/from-osi|/osi endpoints return a clear
# 503 when it is absent. The API-serving deploy extras below bundle it so those
# endpoints work in the shipped images; the UI image proxies to the API and
# does not need it.
osi = [
    "osi-orionbelt",
]
flight = [
    "pyarrow>=16.0,<20.0",
    "ob-flight-extension>=0.1",
    "ob-driver-core>=0.1",
    "ob-bigquery>=0.1",
    "ob-clickhouse>=0.1",
    "ob-databricks>=0.1",
    "ob-dremio>=0.1",
    "ob-duckdb>=0.1",
    "ob-mysql>=0.1",
    "ob-postgres>=0.1",
    "ob-snowflake>=0.1",
    "osi-orionbelt",
]
# Minimal subset of `flight` for deployments that only need DuckDB
# execution (e.g. the public Cloud Run demo with a baked-in DuckDB
# seed file). Drops the seven non-DuckDB vendor wheels and pyarrow
# transitives they pull in, shrinking the runtime image substantially.
flight-duckdb-only = [
    "pyarrow>=16.0,<20.0",
    "ob-flight-extension>=0.1",
    "ob-driver-core>=0.1",
    "ob-duckdb>=0.1",
    "osi-orionbelt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orionbelt"]

# Ship the JSON Schema files (repo-root ``schema/``) inside the wheel as
# package data under ``orionbelt/schema/`` so the reference endpoints can
# load them via importlib.resources regardless of install layout (editable,
# PyPI wheel, or Docker non-editable install). The files stay at the repo
# root as the single source of truth; hatch copies them at build time.
#
# The OSI <-> OBML converter now ships as its own package (osi-orionbelt, a uv
# workspace member under packages/) and is a normal dependency, so it no longer
# needs to be force-included here.
[tool.hatch.build.targets.wheel.force-include]
"schema" = "orionbelt/schema"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Reference modules hold the agent-facing OBML/OBSQL grammar docs as
# module-level strings. Markdown tables intentionally have long lines
# (longer than 100 chars). The text is never wrapped by the formatter.
"src/orionbelt/obml_reference.py" = ["E501"]
"src/orionbelt/obsql_reference.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "docker: requires Docker (testcontainers); run with: pytest -m docker",
    "adbc: requires a reachable PostgreSQL via ADBC; run with: pytest -m adbc",
    "snowflake: requires a live Snowflake account (SNOWFLAKE_* env vars); run with: pytest -m snowflake",
    "bigquery: requires a live BigQuery project (BIGQUERY_* env vars + ADC); run with: pytest -m bigquery",
    "databricks: requires a live Databricks workspace (DATABRICKS_* env vars); run with: pytest -m databricks",
    "dremio: requires the Dremio + OBSL docker-compose stack; see tests/integration/dremio/README.md",
    "notebook: heavy end-to-end notebook execution (Colab quickstart); needs nbclient + ipykernel + duckdb; run with: pytest -m notebook",
]

[tool.coverage.report]
# Lines that should never count against coverage (defensive / type-only).
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",  # ellipsis bodies (Protocols / overloads)
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyarrow ships without a py.typed marker. The API-startup warm-up in
# api/app.py imports it for the parquet round-trip; the imports there
# carry inline ``# type: ignore[import-untyped]``. This override
# silences the same warning anywhere else pyarrow is touched.
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "httpx>=0.28",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.5",
    "duckdb>=1.0",
    "testcontainers>=4.0",
    "psycopg2-binary>=2.9",
    "psycopg[binary]>=3.2",
    "pymysql[rsa]>=1.0",
    "clickhouse-connect>=0.7",
    "nbstripout>=0.9.1",
    "types-networkx>=3.6.1.20260210",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.18",
    "mkdocs-material>=9.7",
    "mkdocs-autorefs>=1.4",
    "mkdocstrings[python]>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "gradio>=5.0,<6.0",
    "pyarrow>=16.0,<20.0",
    "ob-flight-extension>=0.1",
    "ob-driver-core>=0.1",
    "ob-bigquery>=0.1",
    "ob-clickhouse>=0.1",
    "ob-databricks>=0.1",
    "ob-dremio>=0.1",
    "ob-duckdb>=0.1",
    "ob-mysql>=0.1",
    "ob-postgres>=0.1",
    "ob-snowflake>=0.1",
    "osi-orionbelt",
]

[tool.uv.workspace]
members = [
    "drivers/ob-driver-core",
    "drivers/ob-bigquery",
    "drivers/ob-snowflake",
    "drivers/ob-postgres",
    "drivers/ob-clickhouse",
    "drivers/ob-dremio",
    "drivers/ob-databricks",
    "drivers/ob-duckdb",
    "drivers/ob-mysql",
    "drivers/ob-flight-extension",
    "packages/osi-orionbelt",
]

[tool.uv.sources]
# Workspace members reference each other without needing PyPI publication
orionbelt-semantic-layer = { workspace = true }
ob-driver-core = { workspace = true }
ob-bigquery = { workspace = true }
ob-snowflake = { workspace = true }
ob-postgres = { workspace = true }
ob-clickhouse = { workspace = true }
ob-dremio = { workspace = true }
ob-databricks = { workspace = true }
ob-duckdb = { workspace = true }
ob-mysql = { workspace = true }
ob-flight-extension = { workspace = true }
osi-orionbelt = { workspace = true }
