[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ob-dremio"
version = "2.6.0"
description = "OrionBelt Semantic Layer driver for Dremio (DB-API 2.0)"
license = { text = "BSL-1.1" }
readme = "README.md"
authors = [{ name = "Ralf Becher", email = "info@orionbelt.ai" }]
keywords = ["dremio", "semantic-layer", "obml", "db-api", "orionbelt"]
requires-python = ">=3.12"
dependencies = [
    "ob-driver-core>=0.1",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.entry-points."sqlalchemy.dialects"]
"ob.dremio" = "ob_dremio.dialect:OBDremioDialect"

[tool.hatch.build.targets.wheel]
packages = ["src/ob_dremio"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/ob_dremio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires live DB + OB API"]
addopts = "-m 'not integration'"
