[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ob-driver-core"
version = "2.1.0"
description = "Shared foundation for OrionBelt DB-API 2.0 drivers (PEP 249 types, OBML detection, compilation bridge)"
license = { text = "BSL-1.1" }
readme = "README.md"
authors = [{ name = "Ralf Becher", email = "info@orionbelt.ai" }]
keywords = ["semantic-layer", "obml", "db-api", "orionbelt", "pep249"]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ob_driver_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/ob_driver_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
